<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNombres"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/Nombre_text" />

    <EditText
        android:id="@+id/editTextTextNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_Nombres"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Apellidos_text" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_Apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dividendo_Text" />

    <EditText
        android:id="@+id/editTextDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_Dividendo"

        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Divisor_Text" />

    <EditText
        android:id="@+id/editTextDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_divisor"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Numero_Text" />

    <EditText
        android:id="@+id/editTextNumeroInv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_num_nor"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Siguiente"
        android:text="@string/btn_siguiente" />

    <Button
        android:id="@+id/buttuonCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="Cerrar"
        android:text="@string/btnCer" />

</LinearLayout>